nova_rerun_bridge/rerun_app/k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: rerun
  labels:
    app.kubernetes.io/name: rerun
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
    - port: 3001
      targetPort: nginx
      protocol: TCP
      name: nginx
    - port: 9876
      targetPort: sdk
      protocol: TCP
      name: sdk
    - port: 9877
      targetPort: ws
      protocol: TCP
      name: ws
  selector:
    app.kubernetes.io/name: rerun
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rerun
  labels:
    app.kubernetes.io/name: rerun
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rerun
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rerun
    spec:
      dnsPolicy: "ClusterFirst"
      imagePullSecrets:
        - name: pull-secret-registry-code-wabo-run
      containers:
        - name: rerun
          image: "registry.code.wabo.run/ai/rerun-nova/rerun-nova:0.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
            - containerPort: 3001
              protocol: TCP
              name: nginx
            - containerPort: 9876
              protocol: TCP
              name: sdk
            - containerPort: 9877
              protocol: TCP
              name: ws
          resources:
            limits:
              cpu: "2"
              memory: 1Gi
---
