nova_rerun_bridge/rerun_app/k8s/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rerun-route
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match:  PathPrefix(`/some/rerun`)
      services:
        - kind: Service
          name: rerun
          port: nginx
